--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@gluestack-ui/overlay": "^0.1.22",
     "@gluestack-ui/themed": "^1.1.73",
     "@gluestack-ui/toast": "^1.0.9",
+    "@hookform/resolvers": "^5.2.1",
     "@react-native-aria/button": "^0.2.10",
     "@react-native-aria/checkbox": "^0.2.10",
     "@react-native-aria/combobox": "^0.2.7",
@@ -30,7 +31,6 @@
     "@react-native-aria/overlays": "^0.3.15",
     "@react-native-aria/radio": "^0.2.13",
     "@react-native-aria/switch": "^0.2.4",
-    "@react-native-picker/picker": "2.11.1",
     "@react-navigation/bottom-tabs": "^7.3.10",
     "@react-navigation/elements": "^2.3.8",
     "@react-navigation/native": "^7.1.6",
@@ -38,10 +38,12 @@
     "axios": "^1.11.0",
     "expo": "~53.0.22",
     "expo-blur": "~14.1.5",
+    "expo-checkbox": "~4.1.4",
     "expo-constants": "~17.1.7",
     "expo-font": "~13.3.2",
     "expo-haptics": "~14.1.4",
     "expo-image": "~2.4.0",
+    "expo-linear-gradient": "~14.1.5",
     "expo-linking": "~7.1.7",
     "expo-router": "~5.1.5",
     "expo-secure-store": "^14.2.3",
@@ -50,13 +52,14 @@
     "expo-symbols": "~0.4.5",
     "expo-system-ui": "~5.0.11",
     "expo-web-browser": "~14.2.0",
-    "formik": "^2.4.6",
     "lodash": "^4.17.21",
     "lucide-react-native": "^0.542.0",
     "react": "19.0.0",
     "react-dom": "19.0.0",
+    "react-hook-form": "^7.62.0",
     "react-native": "0.79.6",
     "react-native-gesture-handler": "~2.24.0",
+    "react-native-linear-gradient": "^2.8.3",
     "react-native-reanimated": "~3.17.4",
     "react-native-safe-area-context": "^5.4.0",
     "react-native-screens": "~4.11.1",
@@ -66,9 +69,7 @@
     "react-redux": "^9.2.0",
     "redux-persist": "^6.0.0",
     "wanakana": "^5.3.1",
-    "yup": "^1.7.0",
-    "expo-checkbox": "~4.1.4",
-    "expo-linear-gradient": "~14.1.5"
+    "yup": "^1.7.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
