--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@react-native-aria/overlays": "^0.3.15",
     "@react-native-aria/radio": "^0.2.13",
     "@react-native-aria/switch": "^0.2.4",
+    "@react-native-community/datetimepicker": "^8.4.4",
     "@react-navigation/bottom-tabs": "^7.3.10",
     "@react-navigation/elements": "^2.3.8",
     "@react-navigation/native": "^7.1.6",
@@ -58,6 +59,7 @@
     "react-dom": "19.0.0",
     "react-hook-form": "^7.62.0",
     "react-native": "0.79.6",
+    "react-native-device-info": "^14.0.4",
     "react-native-gesture-handler": "~2.24.0",
     "react-native-linear-gradient": "^2.8.3",
     "react-native-reanimated": "~3.17.4",
