Add expo-camera dependency and update Info.plist for camera access
- Added expo-camera version 16.1.11 to package.json and package-lock.json.
- Updated Info.plist to include NSCameraUsageDescription for camera access during card registration and document scanning.
- Refactored navigation in RegisterDisableNotebook1 component to improve user flow.
- Enhanced Step component to conditionally render connectors based on document upload state.
- Introduced new colors in the theme for better UI consistency.

--- a/ios/YellPay/Info.plist
+++ b/ios/YellPay/Info.plist
@@ -75,5 +75,7 @@
     <string>Automatic</string>
     <key>UIViewControllerBasedStatusBarAppearance</key>
     <false/>
+    <key>NSCameraUsageDescription</key>
+    <string>This app needs access to camera to take photos for card registration and document scanning.</string>
   </dict>
 </plist>
